--- a/index.html
+++ b/index.html
@@ -4,32 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Card Matching Game</title>
-    <link rel="stylesheet" href="styles.css"/>
-    <script defer src="./cardGame.js"></script>
+    <title>Memory Game</title>
+    <style>
+        canvas {
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-    <div id="contentCard">
-        <div id="gameContainer">
-            <div id="gameInfo">
-                <div id="scoreBlock">
-                    <p>
-                        Score:
-                    </p>
-                    <p id="scoreValue">
-                        30
-                    </p>
-                </div>
-                <div id="timerBlock">
-                    <p id="timerValue">
-                        0:30
-                    </p>
-                </div>
-            </div>
-            <div id="cardContainer">
-            </div>
-        </div>
-        <button id="startButton">Start</button>
-    </div>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
