--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.js"></script>
-    <script type="module" src="./gameHandler.js"></script>
+    <script type="module" src="./memoryGame.js"></script>
 </body>
 </html>
